node-termination-handler-v1.16.5.yml
---
# Source: aws-node-termination-handler/templates/daemonset.linux.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-node-termination-handler
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-node-termination-handler
    app.kubernetes.io/instance: aws-node-termination-handler
    app.kubernetes.io/version: "1.16.5"
    app.kubernetes.io/part-of: aws-node-termination-handler
    app.kubernetes.io/component: daemonset
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-node-termination-handler
      app.kubernetes.io/instance: aws-node-termination-handler
      app.kubernetes.io/component: daemonset
      kubernetes.io/os: linux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-node-termination-handler
        app.kubernetes.io/instance: aws-node-termination-handler
        app.kubernetes.io/component: daemonset
        kubernetes.io/os: linux
        k8s-app: aws-node-termination-handler
    spec:
      serviceAccountName: aws-node-termination-handler
      securityContext:
        fsGroup: 1000
      priorityClassName: system-node-critical
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: aws-node-termination-handler
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: public.ecr.aws/aws-ec2/aws-node-termination-handler:v1.16.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: uptime
              mountPath: /proc/uptime
              readOnly: true
      volumes:
        - name: uptime
          hostPath:
            path: /proc/uptime
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/compute-type
                operator: NotIn
                values:
                - fargate
      tolerations:
        - operator: Exists
---
# Source: aws-node-termination-handler/templates/daemonset.windows.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-node-termination-handler-win
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-node-termination-handler
    app.kubernetes.io/instance: aws-node-termination-handler
    app.kubernetes.io/version: "1.16.5"
    app.kubernetes.io/part-of: aws-node-termination-handler
    app.kubernetes.io/component: daemonset
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-node-termination-handler
      app.kubernetes.io/instance: aws-node-termination-handler
      app.kubernetes.io/component: daemonset
      kubernetes.io/os: windows
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-node-termination-handler
        app.kubernetes.io/instance: aws-node-termination-handler
        app.kubernetes.io/component: daemonset
        kubernetes.io/os: windows
        k8s-app: aws-node-termination-handler
    spec:
      serviceAccountName: aws-node-termination-handler
      securityContext:
        fsGroup: 1000
      priorityClassName: system-node-critical
      hostNetwork: false
      dnsPolicy: ClusterFirst
      containers:
        - name: aws-node-termination-handler
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: public.ecr.aws/aws-ec2/aws-node-termination-handler:v1.16.5
          imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: windows
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/compute-type
                operator: NotIn
                values:
                - fargate
      tolerations:
        - operator: Exists
